package com.mypresentpast.backend.enums;

/**
 * Enum for Post categories.
 */
public enum Category {
    STORY,
    INFORMATION,
    MYTH
}
