package com.mypresentpast.backend.enums;

/**
 * Enum for Post status.
 */
public enum PostStatus {
    ACTIVE,
    DISABLED,
    DELETED
} 