package com.mypresentpast.backend.model;

public enum UserRole {
    ADMIN,
    NORMAL,
    INSTITUTION
}
